# monitor-reef

./: .dockerignore  .envrc  .gitignore  .gitmodules  AGENTS.md  Cargo.lock.legacy  Cargo.toml  Cargo.toml.legacy  Dockerfile  Jenkinsfile  Makefile  README.md  RFD-0192-draft-2.md  TODO.md  arch-lint.toml  clippy.toml  docker-compose.yml  kelp-lb-controller-plan.md  kelp-relay-poc-plan.md  rust-toolchain.toml  rustfmt.toml  session-handoff.md  tarpaulin.toml
apis/api-template/: Cargo.toml  README.md
apis/api-template/src/: lib.rs
apis/bugview-api/: Cargo.toml  README.md
apis/bugview-api/src/: adf.rs  lib.rs
apis/cloudapi-api/: Cargo.toml
apis/cloudapi-api/src/: lib.rs
apis/cloudapi-api/src/types/: account.rs  changefeed.rs  common.rs  firewall.rs  image.rs  key.rs  machine.rs  machine_resources.rs  misc.rs  mod.rs  network.rs  user.rs  volume.rs
apis/cloudapi-api/tests/: common.rs  serde_account.rs  serde_actions.rs  serde_firewall.rs  serde_image.rs  serde_key.rs  serde_machine.rs  serde_network.rs  serde_package.rs  serde_role.rs  serde_volume.rs
apis/cloudapi-api/tests/fixtures/accesskey/: active.json  expired_temporary.json  inactive.json
apis/cloudapi-api/tests/fixtures/account/: full.json  minimal.json
apis/cloudapi-api/tests/fixtures/firewall/: basic.json  minimal.json
apis/cloudapi-api/tests/fixtures/image/: basic.json  minimal.json  zvol.json
apis/cn-agent-api/: Cargo.toml
apis/cn-agent-api/src/: history.rs  lib.rs  tasks.rs  types.rs
apis/imgapi-api/: Cargo.toml
apis/imgapi-api/src/: lib.rs
apis/imgapi-api/src/types/: action.rs  channel.rs  common.rs  file.rs  image.rs  job.rs  mod.rs  ping.rs  state.rs
apis/jira-api/: Cargo.toml  README.md
apis/jira-api/src/: adf.rs  lib.rs
apis/mahi-api/: Cargo.toml
apis/mahi-api/src/: lib.rs
apis/mahi-api/src/types/: accesskey.rs  common.rs  iam.rs  lookup.rs  mod.rs  sigv4.rs  sts.rs
apis/napi-api/: Cargo.toml
apis/napi-api/src/: lib.rs
apis/napi-api/src/types/: aggregation.rs  common.rs  fabric.rs  ip.rs  manage.rs  mod.rs  network.rs  nic.rs  nic_tag.rs  ping.rs  pool.rs
apis/rebalancer-agent-api/: Cargo.toml
apis/rebalancer-agent-api/src/: lib.rs
apis/rebalancer-types/: Cargo.toml
apis/rebalancer-types/src/: lib.rs
apis/sapi-api/: Cargo.toml
apis/sapi-api/src/: lib.rs
apis/sapi-api/src/types/: application.rs  common.rs  instance.rs  manifest.rs  mod.rs  ops.rs  service.rs
apis/vmapi-api/: Cargo.toml
apis/vmapi-api/src/: lib.rs
apis/vmapi-api/src/types/: common.rs  jobs.rs  metadata.rs  migrations.rs  mod.rs  role_tags.rs  statuses.rs  vms.rs
apis/vmapi-api/tests/: common.rs  serde_job.rs  serde_migration.rs  serde_status.rs  serde_vm.rs
apis/vmapi-api/tests/fixtures/job/: failed.json  (+1 more)
cli/bugview-cli/: Cargo.toml  README.md
cli/bugview-cli/src/: main.rs
cli/cloudapi-cli/: Cargo.toml
cli/cloudapi-cli/src/: main.rs
cli/imgapi-cli/: Cargo.toml
cli/imgapi-cli/src/: main.rs
cli/mdata-client/: Cargo.toml
cli/mdata-client/src/: lib.rs  protocol.rs  transport.rs
cli/mdata-client/src/transport/: mod.rs  unix.rs  windows.rs
cli/napi-cli/: Cargo.toml
cli/napi-cli/src/: main.rs
cli/papi-cli/: Cargo.toml
cli/papi-cli/src/: main.rs
cli/rebalancer-adm/: Cargo.toml
cli/rebalancer-adm/src/: main.rs
cli/sapi-cli/: Cargo.toml
cli/sapi-cli/src/: main.rs
cli/tcadm/: Cargo.toml  build.rs
cli/tcadm/examples/: setup.toml
cli/tcadm/src/: commands.rs  config.rs  fetch_nocloud.rs  http.rs  install.rs  main.rs  self_update.rs  session.rs  setup.rs  update.rs
cli/tcadm/tests/: auth.rs  bootstrap.rs
cli/triton-cli/: Cargo.toml  build.rs
cli/triton-cli/assets/: badger
cli/triton-cli/src/: cache.rs  client.rs  errors.rs  main.rs
cli/triton-cli/src/auth/: jwt.rs  mod.rs  token_provider.rs  tokens.rs
cli/triton-cli/src/commands/: accesskey.rs  account.rs  changefeed.rs  cloudapi.rs  datacenters.rs  env.rs  fwrule.rs  image.rs  info.rs  key.rs  login.rs  logout.rs  mod.rs  network.rs  package.rs  profile.rs  rbac.rs  services.rs  vlan.rs  volume.rs  whoami.rs
cli/triton-cli/src/config/: mod.rs  paths.rs  profile.rs
cli/triton-cli/src/output/: json.rs  mod.rs  table.rs
cli/triton-cli/tests/: cli_account.rs  cli_api_errors.rs  cli_auth.rs  cli_basics.rs  cli_deletion_protection.rs  cli_disks.rs  cli_env.rs  cli_error_paths.rs  cli_fwrules.rs  cli_image_create.rs  cli_images.rs  cli_instance_tag.rs  cli_ips.rs  cli_keys.rs  cli_manage_workflow.rs  cli_migrations.rs  cli_networks.rs  cli_nics.rs  cli_output_format.rs  cli_packages.rs  cli_profiles.rs  cli_snapshots.rs  cli_subcommands.rs  cli_vlans.rs  cli_volumes.rs  config.json.sample
cli/triton-cli/tests/common/: config.rs  mod.rs
cli/triton-cli/tests/comparison/: README.md  ignored-diffs.txt  known-diffs.txt  triton-compare.sh
cli/triton-cli/tests/fixtures/: disk_list.json  fwrule_list.json  image_list.json  image_list_multi.json  key_list.json  network_list.json  nic_list.json  package_list.json  snapshot_list.json  volume_list.json
cli/triton-relay-bridge/: Cargo.toml
cli/triton-relay-bridge/src/: main.rs
cli/tritonadm/: Cargo.toml  build.rs  publisher.pub
cli/tritonadm/examples/: setup.toml
cli/tritonadm/src/: commands.rs  config.rs  fetch_nocloud.rs  http.rs  install.rs  main.rs  self_update.rs  session.rs  setup.rs  update.rs
cli/tritonadm/src/commands/: channel.rs  dc_maint.rs  dev.rs  errors.rs  experimental.rs  image.rs  imgapi_util.rs  mahi.rs  mod.rs  platform.rs  post_setup.rs  sapi.rs  self_update.rs
cli/tritonadm/tests/: auth.rs  bootstrap.rs
cli/tritoncloud-publish/: Cargo.toml  README.md
cli/tritoncloud-publish/src/: channel.rs  main.rs  manta.rs  signing.rs
cli/tritonctl/: Cargo.toml
cli/tritonctl/src/: disk.rs  firewall.rs  floating_ip.rs  image.rs  main.rs  meta.rs  nat_gateway.rs  route.rs  route_table.rs  ssh_key.rs  subnet.rs  vpc.rs
client-generator/: Cargo.toml
client-generator/src/: main.rs
openapi-manager/: Cargo.toml
openapi-manager/src/: main.rs  transforms.rs
openapi-manager/tests/: integration_test.rs
rebalancer/: Cargo.toml
(+1117 files in other folders)
