# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
#
# Copyright 2026 Edgecast Cloud LLC.

[workspace]
members = [
    "apis/bugview-api",
    "apis/cloudapi-api",
    "apis/imgapi-api",
    "apis/jira-api",
    "apis/mahi-api",
    "apis/napi-api",
    "apis/papi-api",
    "apis/sapi-api",
    "apis/triton-api",
    "apis/vmapi-api",
    "cli/bugview-cli",
    "cli/triton-cli",
    "cli/tritonadm",
    "cli/napi-cli",
    "cli/papi-cli",
    "cli/vmapi-cli",
    "clients/internal/bugview-client",
    "clients/internal/cloudapi-client",
    "clients/internal/imgapi-client",
    "clients/internal/jira-client",
    "clients/internal/mahi-client",
    "clients/internal/mahi-sitter-client",
    "clients/internal/napi-client",
    "clients/internal/papi-client",
    "clients/internal/sapi-client",
    "clients/internal/triton-gateway-client",
    "clients/internal/vmapi-client",
    "libs/triton-auth",
    "libs/triton-auth-session",
    "libs/triton-pagination",
    "libs/triton-tls",
    "client-generator",
    "openapi-manager",
    "services/bugview-service",
    "services/jira-stub-server",
    "services/triton-api-server",
    "services/triton-gateway",

    # To be modernized:
    #"cli/manatee-echo-resolver",
    #"libs/cueball-dns-resolver",
    #"libs/cueball-manatee-primary-resolver",
    #"libs/cueball-postgres-connection",
    #"libs/cueball-static-resolver",
    #"libs/cueball-tcp-stream-connection",
    #"libs/cueball",
    #"libs/fast",
    #"libs/libmanta",
    #"libs/moray",
    #"libs/quickcheck-helpers",
    #"libs/rebalancer-legacy/agent",
    #"libs/rebalancer-legacy/manager",
    #"libs/rebalancer-legacy/rebalancer",
    #"libs/rust-utils",
    #"libs/sharkspotter",
]
resolver = "2"

[workspace.package]
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[workspace.dependencies]
aes = "0.8"
anyhow = "1.0"
askama = "0.15"
assert_cmd = "2.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
build-data = "0.3"
bytes = "1"
camino = "1.1"
cargo_toml = "0.22"
cbc = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.4"
comfy-table = "7.0"
config = "0.14"
der = "0.7"
des = "0.8"
dialoguer = "0.12"
dirs = "6.0"
dropshot = { version = "0.16" }
dropshot-api-manager = "0.3"
dropshot-api-manager-types = "0.3"
dsa = "0.6"
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8", "pem"] }
futures-util = "0.3"
getrandom = "0.4"
hostname = "0.4"
http = "1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
indexmap = "2"
indicatif = "0.18"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
ldap3 = { version = "0.12", default-features = false, features = ["tls-rustls-ring"] }
libc = "0.2"
md-5 = "0.10"
openapiv3 = "2.0"
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "jwk", "pem", "std"] }
p384 = { version = "0.13", default-features = false, features = ["ecdsa", "pem", "pkcs8", "std"] }
pem-rfc7468 = { version = "1.0", features = ["alloc"] }
pkcs8 = "0.10"
predicates = "3.0"
pretty_assertions = "1.4"
progenitor = "0.13"
progenitor-client = "0.13"
progenitor-impl = "0.13"
rand = { version = "0.9", features = ["os_rng"] }
# rand_core pinned to 0.6 because the workspace's crypto stack (p256,
# p384, rsa, ed25519-dalek, ssh-key) uses rand_core 0.6 internally.
# See libs/triton-auth/Cargo.toml for the longer explanation.
rand_core = { version = "0.6", features = ["std", "getrandom"] }
rcgen = { version = "0.14", features = ["pem"] }
regex = "1.10"
rpassword = "7"
rsa = { version = "0.9", features = ["sha2", "pem"] }
rustfmt-wrapper = "0.2"
rustls-native-certs = "0.8"
rustls-pemfile = "2"

#
# rustls crypto provider selection -- EDIT ALL FIVE PLACES TOGETHER.
#
# This repo standardises on the `ring` provider. Rustls refuses to
# auto-select a provider when more than one is feature-enabled in the
# build, so every crate that brings rustls in transitively must agree.
#
# To switch to `aws-lc-rs`:
#   1) Change `ring` -> `aws-lc-rs` in `hyper-rustls` below.
#   2) Change `ring` -> `aws-lc-rs` in `rustls` below.
#   3) Change `ring` -> `aws-lc-rs` in `tokio-rustls` below.
#   4) Change reqwest's feature `rustls-no-provider` -> `rustls`
#      (reqwest's `rustls` feature activates `aws-lc-rs` automatically).
#   5) Change `rustls::crypto::ring::default_provider()` to
#      `rustls::crypto::aws_lc_rs::default_provider()` in
#      `services/triton-gateway/src/main.rs` (the explicit install
#      before any ClientConfig is built).
#
# reqwest also needs to track with progenitor-client.
#
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "logging", "native-tokio", "tls12", "ring"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
# schemars version is tied to dropshot/progenitor compatibility.
# Dropshot 0.16.x requires schemars 0.8.x. Do not upgrade to
# schemars 1.x without also upgrading dropshot AND progenitor.
#
# NOTE: dropshot 0.17 + progenitor 0.13 was attempted 2026-04-23 —
# dropshot 0.17 emits richer WebSocket response schemas (101 / 4XX /
# 5XX instead of `default`) which triggers a progenitor 0.13 panic
# (`assertion failed: response_types.len() <= 1` in method.rs).
# Revisit after both crates cut a coordinated release that closes
# the assertion.
schemars = { version = "0.8", features = ["chrono", "derive"] }
sec1 = { version = "0.7", features = ["pem"] }
secrecy = { version = "0.10", features = ["serde"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serial_test = "3"
sha1 = "0.10"
sha2 = "0.10"
signature = "2.2"
ssh-encoding = "0.2"
ssh-key = { version = "0.6", features = ["ed25519", "rsa", "ecdsa", "p256", "p384", "encryption"] }
strum = { version = "0.28", features = ["derive"] }
syn = "2.0"
tempfile = "3"
test-case = "3.3"
thiserror = "2.0"
time = "0.3"
tokio = { version = "1.48", features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }
webpki-roots = "1"

#
# Internal workspace crates.
#
# All intra-workspace dependencies are declared here and pulled in by
# consumers with `workspace = true`, so crate Cargo.tomls do not carry
# relative `../../...` paths.
#
bugview-api = { path = "apis/bugview-api" }
bugview-client = { path = "clients/internal/bugview-client" }
cloudapi-api = { path = "apis/cloudapi-api" }
imgapi-api = { path = "apis/imgapi-api" }
imgapi-client = { path = "clients/internal/imgapi-client" }
jira-api = { path = "apis/jira-api" }
jira-client = { path = "clients/internal/jira-client" }
jira-stub-server = { path = "services/jira-stub-server" }
mahi-api = { path = "apis/mahi-api" }
mahi-client = { path = "clients/internal/mahi-client" }
mahi-sitter-client = { path = "clients/internal/mahi-sitter-client" }
napi-api = { path = "apis/napi-api" }
napi-client = { path = "clients/internal/napi-client" }
papi-api = { path = "apis/papi-api" }
papi-client = { path = "clients/internal/papi-client" }
sapi-api = { path = "apis/sapi-api" }
sapi-client = { path = "clients/internal/sapi-client" }
triton-api = { path = "apis/triton-api" }
triton-auth = { path = "libs/triton-auth" }
triton-auth-session = { path = "libs/triton-auth-session" }
triton-gateway-client = { path = "clients/internal/triton-gateway-client" }
triton-pagination = { path = "libs/triton-pagination" }
triton-tls = { path = "libs/triton-tls" }
vmapi-api = { path = "apis/vmapi-api" }
vmapi-client = { path = "clients/internal/vmapi-client" }
