# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
#
# Copyright 2025 Edgecast Cloud LLC.

[package]
name = "openapi-manager"
version = "0.1.0"
edition.workspace = true

[dependencies]
dropshot = { workspace = true }
dropshot-api-manager = { workspace = true }
dropshot-api-manager-types = { workspace = true }
bugview-api = { path = "../apis/bugview-api" }
cloudapi-api = { path = "../apis/cloudapi-api" }
jira-api = { path = "../apis/jira-api" }
anyhow = { workspace = true }
camino = { workspace = true }
cargo_toml = { workspace = true }
clap = { workspace = true }
semver = { workspace = true }

[[bin]]
name = "openapi-manager"
path = "src/main.rs"
