# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
#
# Copyright 2026 Edgecast Cloud LLC.

[package]
name = "openapi-manager"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
dropshot = { workspace = true }
dropshot-api-manager = { workspace = true }
dropshot-api-manager-types = { workspace = true }
bugview-api = { path = "../apis/bugview-api" }
jira-api = { path = "../apis/jira-api" }
rebalancer-agent-api = { path = "../apis/rebalancer-agent-api" }
rebalancer-manager-api = { path = "../apis/rebalancer-manager-api" }
anyhow = { workspace = true }
camino = { workspace = true }
cargo_toml = { workspace = true }
clap = { workspace = true }
semver = { workspace = true }

[[bin]]
name = "openapi-manager"
path = "src/main.rs"
