# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
#
# Copyright 2026 Edgecast Cloud LLC.

[package]
name = "openapi-manager"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[[bin]]
name = "openapi-manager"
path = "src/main.rs"

[dependencies]
dropshot = { workspace = true }
dropshot-api-manager = { workspace = true }
dropshot-api-manager-types = { workspace = true }
bugview-api = { workspace = true }
cloudapi-api = { workspace = true }
imgapi-api = { workspace = true }
jira-api = { workspace = true }
mahi-api = { workspace = true }
napi-api = { workspace = true }
papi-api = { workspace = true }
sapi-api = { workspace = true }
triton-api = { workspace = true }
vmapi-api = { workspace = true }
anyhow = { workspace = true }
camino = { workspace = true }
cargo_toml = { workspace = true }
clap = { workspace = true }
semver = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
