[package]
name = "rebalancer"
version = "0.1.0"
edition = "2018"
workspace = ".."

[features]
# No features by default
default = []
postgres = ["libmanta/postgres", "diesel/postgres", "diesel/serde_json"]

[dependencies]
base64 = "0.10.1"
clap = "2.33.0"
crossbeam-channel = "0.4.2"
diesel = {version = "1.4.2", features = ["sqlite"]}
futures = "0.1.29"
gethostname = "0.2.1"
uuid = { version = "0.7.4", features = ["v4"] }
gotham = "0.4.0"
gotham_derive = "0.4.0"
hyper = "0.12"
joyent-rust-utils = { path = "../libs/rust-utils" }
lazy_static = "1.4.0"
libmanta = { path = "../libs/libmanta" }
mime = "0.3.13"
md-5 = "0.8.0"
prometheus = "0.7.0"
quickcheck = "0.8.5"
quickcheck_helpers = { path = "../libs/quickcheck-helpers" }
reqwest = "0.9.18"
rusqlite = "0.19.0"
serde = { version = "1.0.91", features = ["derive"] }
serde_derive = "1.0.91"
serde_json = "1.0.39"
slog = "2.5.2"
slog-bunyan = "2.2"
slog-scope = "4.1.2"
strum = "0.16.0"
strum_macros = "0.16.0"
threadpool = "1.7.1"
thread-id = "3.3.0"
toml = "0.5"
trust-dns-resolver = "0.11.1"
walkdir = "2"
