# Copyright 2025 Edgecast Cloud LLC.
# This Source Code Form is subject to the terms of the Mozilla Public License, v. 2.0. If a copy of the MPL was not distributed with this file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "example-api"
version = "0.1.0"
edition = "2021"

[dependencies]
dropshot = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }

[lints.clippy]
unused_async = "allow"
