# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
#
# Copyright 2026 Edgecast Cloud LLC.

[package]
name = "imgapi-api"
version = "4.13.1"
edition.workspace = true
description = "Triton IMGAPI trait definition"

[lints]
workspace = true

[dependencies]
dropshot = { workspace = true }
http = "1.1"
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
