# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
#
# Copyright 2026 Edgecast Cloud LLC.

[package]
name = "mahi-api"
version = "2.1.0"
edition.workspace = true
description = "Mahi (Manta Auth Cache) API trait definition"

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
dropshot = { workspace = true }
http = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
