# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
#
# Copyright 2020 Joyent, Inc.
# Copyright 2026 Edgecast Cloud LLC.

[package]
name = "rebalancer-agent-api"
version = "0.1.0"
edition.workspace = true
description = "Dropshot API trait for the rebalancer agent service"

[lints]
workspace = true

[dependencies]
dropshot = { workspace = true }
rebalancer-types = { path = "../rebalancer-types" }
schemars = { workspace = true }
serde = { workspace = true }
