# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
#
# Copyright 2020 Joyent, Inc.
# Copyright 2026 Edgecast Cloud LLC.

[package]
name = "rebalancer-types"
version = "0.1.0"
edition.workspace = true
description = "Shared types for the rebalancer agent and manager"

[lints]
workspace = true

[dependencies]
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { version = "0.27", features = ["derive"] }
uuid = { workspace = true }
