# Copyright 2025 Edgecast Cloud LLC.
# This Source Code Form is subject to the terms of the Mozilla Public License, v. 2.0. If a copy of the MPL was not distributed with this file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "bugview-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bugview"
path = "src/main.rs"

[dependencies]
bugview-client = { path = "../../clients/internal/bugview-client" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
chrono = "0.4"
