# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
#
# Copyright 2026 Edgecast Cloud LLC.

[package]
name = "bugview-cli"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "bugview"
path = "src/main.rs"

[dependencies]
bugview-api = { path = "../../apis/bugview-api" }
bugview-client = { path = "../../clients/internal/bugview-client" }
jira-api = { path = "../../apis/jira-api" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true

