# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
#
# Copyright 2026 Edgecast Cloud LLC.

[package]
name = "imgapi-cli"
version = "4.13.1"
edition.workspace = true
description = "CLI for Triton IMGAPI"

[lints]
workspace = true

[[bin]]
name = "imgapi"
path = "src/main.rs"

[dependencies]
imgapi-api = { path = "../../apis/imgapi-api" }
imgapi-client = { path = "../../clients/internal/imgapi-client" }
clap = { workspace = true, features = ["env"] }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
bytes = "1"
futures-util = "0.3"
