# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
#
# Copyright 2026 Edgecast Cloud LLC.

[package]
name = "napi-cli"
version = "1.4.3"
edition.workspace = true
description = "CLI for Triton NAPI (Networking API)"

[lints]
workspace = true

[[bin]]
name = "napi"
path = "src/main.rs"

[dependencies]
napi-api = { workspace = true }
napi-client = { workspace = true }
clap = { workspace = true, features = ["env"] }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
