# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
#
# Copyright 2026 Edgecast Cloud LLC.

[package]
name = "papi-cli"
version = "7.2.5"
edition.workspace = true
description = "CLI for Triton PAPI (Packages API)"

[lints]
workspace = true

[[bin]]
name = "papi"
path = "src/main.rs"

[dependencies]
papi-api = { path = "../../apis/papi-api" }
papi-client = { path = "../../clients/internal/papi-client" }
clap = { workspace = true, features = ["env"] }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
